# crowdsource-rs

./: .editorconfig  .env  Cargo.toml  README.md  configuration.yaml  t.py
.github/workflows/: check.yml  rolling.yml  test.yml
.sqlx/: query-0ddb1c8fca4302e95e4966996173da2b69dec666fc687698452b7ed1402df2f2.json  query-cca2d365e6c79e446bc4d67ddf08de798ee8e3e443da37c6ae3266df7806776d.json
docs/adr/: ADR-0001.md
docs/rfc/: RFC-0001.md
docs/work/: WI-2026-01-30-85d2.md
gov/: config.toml
gov/adr/: ADR-0001-use-axum-as-http-server.toml
gov/rfc/RFC-0001/: rfc.json
gov/rfc/RFC-0001/clauses/: C-HEX-ARCH.json  C-SCOPE.json  C-SUMMARY.json
gov/work/: 2026-01-30-implement-the-user-api.toml
migrations/: 20260219171637_create_user_table.up.sql
scripts/: init_db.sh
src/lib/: configuration.rs  domain.rs  lib.rs  outbound.rs
src/lib/inbound/: http.rs
src/lib/outbound/: collecting_user_notifier.rs  email_user_notifier.rs  sql_user_repository.rs  sqlx_user_repository.rs
tests/api/: helpers.rs  main.rs  user_api.rs
tests/api/snapshots/: api__user_api__add_user_fails_with_500_if_there_is_a_fatal_database_error.snap  api__user_api__add_user_returns_422_for_existing_data-duplicate email.snap  api__user_api__add_user_returns_422_for_existing_data-duplicate username.snap  api__user_api__add_user_returns_422_for_invalid_data-empty username.snap  api__user_api__add_user_returns_422_for_invalid_data-invalid email.snap  api__user_api__add_user_returns_422_for_invalid_data-missing email.snap  api__user_api__add_user_returns_422_for_invalid_data-missing username.snap  api__user_api__add_user_returns_422_for_invalid_data-username with whitespace.snap
(+8 files in other folders)
