[package]
name = "crowdsource"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "crwdsrc-server"
path = "src/bin/crwdsrc-server/main.rs"
doctest = false
test = false

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
email_address = "0.2.9"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.21.0", features = ["v4"] }
