[package]
name = "crowdsource"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "crwdsrc-server"
path = "src/bin/crwdsrc-server/main.rs"
doctest = false
test = false

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = "0.4.44"
config = "0.15.19"
email_address = "0.2.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
